--- a/index.html
+++ b/index.html
@@ -4,37 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESP32 LED Controller</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #222; color: white; }
+        .container { max-width: 400px; margin: auto; padding: 20px; }
+        .hidden { display: none; }
+        button, input, select { width: 100%; margin: 10px 0; padding: 10px; font-size: 16px; }
+        input[type="color"] { padding: 5px; }
+    </style>
     <script>
         var ws;
-        var unlocked = false;
-        
+        var authenticated = false;
+
         function connectWebSocket() {
             ws = new WebSocket('ws://' + window.location.hostname + ':81/');
-            ws.onmessage = function(event) { console.log("Received:", event.data); };
+            ws.onmessage = function(event) {
+                console.log("Received:", event.data);
+                if (event.data === "auth:ok") {
+                    document.getElementById("controls").classList.remove("hidden");
+                    document.getElementById("auth").classList.add("hidden");
+                    authenticated = true;
+                } else if (event.data === "auth:fail") {
+                    alert("Incorrect PIN!");
+                } else {
+                    var data = JSON.parse(event.data);
+                    document.getElementById("power").innerText = data.power ? "Power: ON" : "Power: OFF";
+                    document.getElementById("brightness").value = data.brightness;
+                    document.getElementById("mode").value = data.mode;
+                    document.getElementById("color").value = "#" + data.color.toString(16).padStart(6, "0");
+                }
+            };
         }
+
+        function sendCommand(cmd) { if (authenticated) ws.send(cmd); }
 
         function validatePin() {
-            var pin = prompt("Enter 4-digit PIN:");
-            fetch('/validate-pin?pin=' + pin).then(response => response.text()).then(result => {
-                if (result === "OK") { document.getElementById("controls").style.display = "block"; unlocked = true; }
-                else alert("Incorrect PIN!");
-            });
+            var pin = document.getElementById("pin").value;
+            ws.send("pin:" + pin);
         }
-
-        function sendCommand(cmd) { if (unlocked) ws.send(cmd); }
     </script>
 </head>
-<body onload="connectWebSocket(); validatePin();">
+<body onload="connectWebSocket();">
     <h1>ESP32 LED Controller</h1>
-    <div id="controls" style="display:none;">
-        <button onclick="sendCommand('toggle_power')">Power</button>
-        <button onclick="sendCommand('toggle_white')">Warm White</button>
-        <input type="range" min="0" max="255" onchange="sendCommand('brightness:' + this.value)">
-        <select onchange="sendCommand('mode:' + this.value)">
+
+    <div id="auth" class="container">
+        <input type="password" id="pin" placeholder="Enter PIN">
+        <button onclick="validatePin()">Unlock</button>
+    </div>
+
+    <div id="controls" class="container hidden">
+        <button id="power" onclick="sendCommand('toggle_power')">Power</button>
+        <input type="range" id="brightness" min="0" max="255" onchange="sendCommand('brightness:' + this.value)">
+        <select id="mode" onchange="sendCommand('mode:' + this.value)">
             <option value="solid">Solid</option>
             <option value="rainbow">Rainbow</option>
         </select>
-        <input type="color" onchange="sendCommand('color:' + this.value.replace('#', ''))">
+        <input type="color" id="color" onchange="sendCommand('color:' + this.value.replace('#', ''))">
     </div>
 </body>
 </html>
